k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-palette-rep
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: color-palette-rep
  template:
    metadata:
      labels:
        app: color-palette-rep
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: color-palette-rep
          image: viniio/color-palette-rep:1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
