k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-palette-rep
spec:
  selector:
    app: color-palette-rep
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
